# Chromify

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
data/raw/: .gitignore  raw_archive.zip.dvc
docker/: api.dockerfile  frontend.dockerfile  train-local.dockerfile  train.dockerfile
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gcp/: buil_api_container.yaml  train.yaml
reports/: README.md
scripts/: fix_requirements.py
src/chromify/: api.py  data.py  model.py  train.py  utils.py
src/frontend/chromify_frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/chromify_frontend/src/: App.tsx  main.tsx
src/frontend/chromify_frontend/src/api/: index.tsx
src/frontend/chromify_frontend/src/api/interface/: index.tsx
src/frontend/chromify_frontend/src/components/: DoubleHeader.tsx  ImageUpload.tsx
tests/: test_data.py  test_model.py  test_utils.py
